out/2.4.29_3.0.36/2023_01_11_12_20_01/javascript/js-v3/petstore3/logs/logs

****** BUILD ******


****** executing: npm i ******

npm WARN deprecated superagent@3.7.0: Please upgrade to v7.0.2+ of superagent.  We have fixed numerous issues with streams, form-data, attach(), filesystem errors not bubbling up (ENOENT on attach()), and all tests are now passing.  See the releases tab for more information at <https://github.com/visionmedia/superagent/releases>.
npm WARN deprecated babel@6.23.0: In 6.x, the babel package has been deprecated in favor of babel-cli. Check https://opencollective.com/babel to support the Babel maintainers
npm WARN deprecated chokidar@1.7.0: Chokidar 2 will break on node v14+. Upgrade to chokidar 3 with 15x less dependencies.
npm WARN deprecated mkdirp@0.5.0: Legacy versions of mkdirp are no longer supported. Please update to mkdirp 1.x. (Note that the API surface has changed to use Promises in 1.x.)
npm WARN deprecated jade@0.26.3: Jade has been renamed to pug, please install the latest version of pug instead of jade
npm WARN deprecated formidable@1.2.6: Please upgrade to latest, formidable@v2 or formidable@v3! Check these notes: https://bit.ly/2ZEqIau
npm WARN deprecated formatio@1.1.1: This package is unmaintained. Use @sinonjs/formatio instead
npm WARN deprecated samsam@1.1.2: This package has been deprecated in favour of @sinonjs/samsam
npm WARN deprecated core-js@2.6.12: core-js@<3.23.3 is no longer maintained and not recommended for usage due to the number of issues. Because of the V8 engine whims, feature detection in old core-js versions could cause a slowdown up to 100x even if nothing is polyfilled. Some versions have web compatibility issues. Please, upgrade your dependencies to the actual version of core-js.
npm WARN deprecated minimatch@0.2.14: Please update to minimatch 3.0.2 or higher to avoid a RegExp DoS issue
npm WARN deprecated graceful-fs@2.0.3: please upgrade to graceful-fs 4 for compatibility with current and future versions of Node.js
npm WARN deprecated mkdirp@0.3.0: Legacy versions of mkdirp are no longer supported. Please update to mkdirp 1.x. (Note that the API surface has changed to use Promises in 1.x.)
npm WARN deprecated fsevents@1.2.13: fsevents 1 will break on node v14+ and could be using insecure binaries. Upgrade to fsevents 2.
npm WARN deprecated samsam@1.1.3: This package has been deprecated in favour of @sinonjs/samsam
npm WARN deprecated source-map-resolve@0.5.3: See https://github.com/lydell/source-map-resolve#deprecated
npm WARN deprecated resolve-url@0.2.1: https://github.com/lydell/resolve-url#deprecated
npm WARN deprecated source-map-url@0.4.1: See https://github.com/lydell/source-map-url#deprecated
npm WARN deprecated urix@0.1.0: Please see https://github.com/lydell/urix#deprecated

> core-js@2.6.12 postinstall /home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/core-js
> node -e "try{require('./postinstall')}catch(e){}"

npm notice created a lockfile as package-lock.json. You should commit this file.
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: fsevents@^1.0.0 (node_modules/chokidar/node_modules/fsevents):
npm WARN notsup SKIPPING OPTIONAL DEPENDENCY: Unsupported platform for fsevents@1.2.13: wanted {"os":"darwin","arch":"any"} (current: {"os":"linux","arch":"x64"})
npm WARN swagger_petstore___open_api_30@1.0.5 No repository field.
npm WARN swagger_petstore___open_api_30@1.0.5 license should be a valid SPDX license expression

added 371 packages from 553 contributors and audited 372 packages in 10.032s

19 packages are looking for funding
  run `npm fund` for details

found 26 vulnerabilities (13 low, 2 moderate, 9 high, 2 critical)
  run `npm audit fix` to fix them, or `npm audit` for details

****** executing: npm run test ******


> swagger_petstore___open_api_30@1.0.5 test /home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___
> mocha --compilers js:babel-core/register --recursive

/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/src/index.js:14
import ApiClient from './ApiClient';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at loader (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/babel-register/lib/node.js:144:5)
    at Object.require.extensions.<computed> [as .js] (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/babel-register/lib/node.js:154:7)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at /home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/test/api/PetApi.spec.js:19:35
    at Object.<anonymous> (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/test/api/PetApi.spec.js:13:2)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at loader (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/babel-register/lib/node.js:144:5)
    at Object.require.extensions.<computed> [as .js] (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/babel-register/lib/node.js:154:7)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Module.require (internal/modules/cjs/loader.js:887:19)
    at require (internal/modules/cjs/helpers.js:74:18)
    at /home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/mocha/lib/mocha.js:216:27
    at Array.forEach (<anonymous>)
    at Mocha.loadFiles (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/mocha/lib/mocha.js:213:14)
    at Mocha.run (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/mocha/lib/mocha.js:453:10)
    at Object.<anonymous> (/home/runner/work/swagger-codegen/swagger-codegen/generated/js-v3___petstore3___/node_modules/mocha/bin/_mocha:393:18)
    at Module._compile (internal/modules/cjs/loader.js:999:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:60:12)
    at internal/main/run_main_module.js:17:47
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! swagger_petstore___open_api_30@1.0.5 test: `mocha --compilers js:babel-core/register --recursive`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the swagger_petstore___open_api_30@1.0.5 test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/runner/.npm/_logs/2023-01-11T12_21_59_114Z-debug.log
